removed redundant imports from app.js and commented out redundant routes. fixed card styling in PageContainer.css so that cards wrap correctly. add upcoming event logic into Details so that if no upcoming events then a message is displayed

--- a/src/components/Containers/PageContainer.css
+++ b/src/components/Containers/PageContainer.css
@@ -19,12 +19,11 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 60%;
-  min-width: 640px;
-  height: 100vh;
+  justify-content: center;
+  align-content: center;
+  /* height: 100vh; */
   padding: 1rem;
-  background: transparent;
-  /* color: #fff; */
+  /* background: transparent; */
   overflow-y: scroll;
   margin: 0 auto;
 }
@@ -32,4 +31,9 @@ a {
 .card-container {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  margin: 0 auto;
 }
